<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.itemSelectedActivity.ItemSelectedAtivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_item_selected_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background_app_bar"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ImageView
        android:id="@+id/item_selected_image_activity"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/activity_item_selected_toolbar"
        android:layout_marginTop="5dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:srcCompat="@drawable/loading_vector"
        tools:ignore="UnknownId" />

    <LinearLayout
        android:id="@+id/product_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_selected_image_activity"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/item_selected_product_name_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_selected_product_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_selected_product_name_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_layout_1"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/item_selected_ingredients_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_selected_ingredients"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/item_selected_ingredients_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="ingredients" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_layout_2"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/item_selected__provenience_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_selected_provenience"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/item_selected__provenience_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="provenience" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/product_layout_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_layout_3"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"

        >

        <TextView
            android:id="@+id/item_selected_price_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_selected_price"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/item_selected_price_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="Price" />
    </LinearLayout>


    <Button
        android:id="@+id/item_selected_button_add_cart_activity"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_layout_4"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/item_selected_buy_now"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

</RelativeLayout>